# mailin

./: .dockerignore  .gitignore  .gitlab-ci.yml  .woodpecker.yml  Cargo.toml  Dockerfile  LICENSE  README.md
mailin/: Cargo.toml
mailin-embedded/: Cargo.toml  README.md
mailin-embedded/scripts/: release.sh
mailin-embedded/src/: client.rs  err.rs  lib.rs  ossl.rs  rtls.rs  running.rs  session.rs  ssl.rs  utils.rs
mailin-server/: Cargo.toml  README.md
mailin-server/deploy/: deploy.sh  install  mailin.service
mailin-server/deploy/rpmbuild/: build.sh  mailin.spec
mailin-server/k8s-deploy/: certificate.yaml
mailin-server/scripts/: client.sh  openssl-connect.sh  ssl-server.sh  test.sh
mailin-server/src/: err.rs  mailstore.rs  main.rs  store.rs
mailin-server/systemd/: README.md  mailin.service  mailin.socket
mailin-server/test-certs/: cert.pem  key.pem
mailin/scripts/: release.sh
mailin/src/: auth.rs  cmd.rs  fsm.rs  lib.rs  parser.rs  response.rs  session.rs  smtp.rs  state.rs  states.rs
mailin/was-src/: lib.rs  smtp.rs
mime-event/: Cargo.toml  README.md
mime-event/src/: debug.rs  event.rs  header.rs  header_buffer.rs  lib.rs  line_parser.rs  message.rs  message_handler.rs  message_parser.rs  parser.rs
mime-event/tests/: events.rs  message.rs  multipart_alternative.msg  multipart_mixed.msg  swaks.msg
mxdns/: Cargo.toml  README.md
mxdns/scripts/: release.sh
mxdns/src/: blocklist.rs  err.rs  join_all.rs  lib.rs  resolve.rs
parser/: Cargo.toml  README.md
parser/src/: parser.rs  types.rs
