[package]
name = "mailin-embedded"
version = "0.6.1"
authors = ["alienscience <saul@alienscience.org.uk>"]
description = "An SMTP server that can be embedded in other programs"
homepage = "https://gitlab.com/alienscience/mailin"
repository = "https://gitlab.com/alienscience/mailin"
readme = "README.md"
keywords = ["smtp","server","email"]
categories = ["email","network-programming"]
license = "MIT OR Apache-2.0"
edition = "2018"

[package.metadata.docs.rs]
features = ["rtls"]

[features]
ossl=["openssl"]
rtls=["rustls"]

[dependencies]
mailin = { path="../mailin", version = "^0.5.0"}
scoped_threadpool = "0.1"
log = "0.4"
lazy_static = "1.1"
bufstream = "0.1"
rustls = { version = "0.19", optional = true }
openssl = { version = "0.10", optional = true }

