[package]
name = "mailin-embedded"
version = "0.7.0"
authors = ["alienscience <saul@alienscience.org.uk>"]
description = "An SMTP server that can be embedded in other programs"
homepage = "https://gitlab.com/alienscience/mailin"
repository = "https://gitlab.com/alienscience/mailin"
readme = "README.md"
keywords = ["smtp", "server", "email"]
categories = ["email", "network-programming"]
license = "MIT OR Apache-2.0"
edition = "2021"

[package.metadata.docs.rs]
features = ["rtls"]

[features]
ossl = ["openssl"]
rtls = ["rustls", "rustls-pemfile"]

[dependencies]
mailin = { path = "../mailin", version = "^0.6.0" }
scoped_threadpool = "0.1"
log = "0.4"
lazy_static = "1.1"
bufstream = "0.1"
rustls = { version = "0.20", optional = true }
rustls-pemfile = { version = "0.3", optional = true }
openssl = { version = "0.10", optional = true }
