[package]
name = "mailin-server"
version = "0.1.0"
authors = ["alienscience <saul@alienscience.org.uk>"]
edition = "2021"

[dependencies]
mailin-embedded = { features = ["rtls"], path = "../mailin-embedded" }
mxdns = { path = "../mxdns" }
mime-event = { path = "../mime-event" }
log = "0.4"
simplelog = "0.12"
time = { version = "0.3", features = ["formatting", "local-offset"] }
getopts = "0.2"
anyhow = "1"
