[package]
name = "mailin"
version = "0.6.0"
authors = ["alienscience <saul@alienscience.org.uk>"]
exclude = ["docs/*"]
description = "A library for writing SMTP servers"
homepage = "https://gitlab.com/alienscience/mailin"
repository = "https://gitlab.com/alienscience/mailin"
readme = "README.md"
keywords = ["smtp","server","email"]
categories = ["email","network-programming"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
nom = "7"
log = "0.4"
base64 = "0.13"
ternop = "1.0"
either = "1.5"
