[package]
name = "mxdns"
version = "0.1.0"
authors = ["alienscience <saul@alienscience.org.uk>"]
description = "DNS utilities for SMTP servers"
homepage = "https://gitlab.com/alienscience/mailin"
repository = "https://gitlab.com/alienscience/mailin"
readme = "README.md"
keywords = ["dns","smtp","email"]
categories = ["email","network-programming"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
trust-dns = "0.15"
tokio = "0.1"
resolv-conf = "0.6"

[dev-dependencies]
matches = "0.1"

[features]
# Some tests use DNS blocklists servers over the internet.
# Set this feature to turn off the tests that require network access.
no-network-tests = []