[package]
name = 'mxdns'
version = '0.2.2'
authors = ['alienscience <saul@alienscience.org.uk>']
description = 'DNS utilities for SMTP servers'
homepage = 'https://gitlab.com/alienscience/mailin'
repository = 'https://gitlab.com/alienscience/mailin'
readme = 'README.md'
keywords = [
    'dns',
    'smtp',
    'email',
]
categories = [
    'email',
    'network-programming',
]
license = 'MIT OR Apache-2.0'
edition = '2018'

[dependencies]
thiserror = '1'
resolv-conf = '0.7'
log = '0.4'
smol = '1.2.5'
pin-project-lite = '0.2.6'

[dependencies.dnsclientx]
version = '0.3'
features = ['smol-async']

[dev-dependencies]
display_bytes = '0.2'
