[package]
name = "smtp-parser"
version = "0.0.1"
authors = ["alienscience <saul@alienscience.org.uk>"]
description = "Parse incoming SMTP commands"
homepage = "https://gitlab.com/alienscience/mailin"
repository = "https://gitlab.com/alienscience/mailin"
readme = "README.md"
keywords = ["smtp", "server", "parser"]
categories = ["email", "network-programming"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
nom = "7"
base64 = "0.13"
